--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
-    <<a target="_blank" href="https://stackblitz.com/github/Energon89/dz/tree/master/8">DZ#8</a>
+    <a target="_blank" href="https://stackblitz.com/github/Energon89/dz/tree/master/8">---DZ#8---</a>
   </body>
 </html>
