--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JS Boilerplace</title>
     <link rel="stylesheet" href="../src/style.css" />
-  </head>
-  <body>
-    <a target="_blank" href="https://stackblitz.com/github/Energon89/dz/tree/master/8">---DZ#8---</a>
-  </body>
+</head>
+  
+<body id="afd" style="visibility: visible;">
+
+	<div id="holder">
+		<div id="header">
+      <div id="domainname">
+        <a href="https://stackblitz.com/@Energon89" target="_blank" class="domainlink" data-notrack="true" >stackblitz.com</a></div>			
+		</div><!--header-->
+		<div id="content">
+			<div id="tcHolder">
+          <!--<div id="tc" style="width: 666px; font-weight: normal; text-align: center; height: 313px;"></div>-->
+          <div class="fa_">
+          <h1>IT-Academy cours</h1>
+          <div class="ga_" style="border-left-color: #1F8A70">
+          <a href="https://stackblitz.com/github/Energon89/dz/tree/master/8" class="d_ popstripeRs" data-notrack="true" target="_blank">
+            <span dir="ltr">Homework #8</span>
+            <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
+          <div class="ga_" style="border-left-color:  #BEDB39">
+              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/9" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Homework #9</span>
+                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a></div>
+          <div class="ga_" style="border-left-color:  #FD7400">
+              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/10" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Homework #10</span>
+                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
+        </div>
+        </div>
+			</div>
+			<div class="clear"></div>
+		</div>
+		</div>
+	<div id="copyright">
+2019 Copyright. <br><br>
+  </div>
+</body>
 </html>
