--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
 		</div><!--header-->
 		<div id="content">
 			<div id="tcHolder">
-          <!--<div id="tc" style="width: 666px; font-weight: normal; text-align: center; height: 313px;"></div>-->
           <div class="fa_">
           <h1>IT-Academy cours</h1>
           <div class="ga_" style="border-left-color: #1F8A70">
@@ -42,7 +41,7 @@
 		</div>
 		</div>
 	<div id="copyright">
-2019 Copyright. <br><br>
+<!--2019 Copyright. <br><br>-->
   </div>
 </body>
 </html>
