--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
           <div class="ga_" style="border-left-color:  #BEDB39">
-              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/9" class="d_ popstripeRs" data-notrack="true" target="_blank">
+              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/9.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
                 <span dir="ltr">Homework #9</span>
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
