update link IT-Academy

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 		<div id="content">
 			<div id="tcHolder">
           <div class="fa_">
-          <h1>IT-Academy cours</h1>
+          <a href="https://www.it-academy.by/course/front-end-developer/razrabotka-veb-prilozheniy-na-javascript/" target="_blank" id="linkIt">IT-Academy course "JavaScript Front-end Development"</a>
           <div class="ga_" style="border-left-color: #1F8A70">
           <a href="https://stackblitz.com/github/Energon89/dz/tree/master/8" class="d_ popstripeRs" data-notrack="true" target="_blank">
             <span dir="ltr">Homework #8</span>
