--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
           <div class="ga_" style="border-left-color:  #FD7400">
-              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/10" class="d_ popstripeRs" data-notrack="true" target="_blank">
+              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/10/10.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
                 <span dir="ltr">Homework #10</span>
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
