--- a/10/10.1/public/index.html
+++ b/10/10.1/public/index.html
@@ -29,9 +29,9 @@
         <div data-mode="timer" class="hidden">
           <div class="output">00:05:00</div>
           <div class="buttons">
-            <button class="start">Start</button>
-            <button class="stop">Stop</button>
-            <button class="reset">Reset</button>
+            <button data-mode="start" class="start">Start</button>
+            <button data-mode="stop" class="stop">Stop</button>
+            <button data-mode="reset" class="reset">Reset</button>
           </div>
         </div>
       </div>
