--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,14 @@
               </a></div>
           <div class="ga_" style="border-left-color:  #FD7400">
               <a href="https://stackblitz.com/github/Energon89/dz/tree/master/10/10.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
-                <span dir="ltr">Homework #10</span>
+                <span dir="ltr">Homework #10.1</span>
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
-          </a></div>
-        </div>
+              </a>
+              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/10/10.3" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Homework #10.3</span>
+               <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a></div>
+          </div>
         </div>
 			</div>
 			<div class="clear"></div>
