add link dz#11.1 to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,11 @@
                 <span dir="ltr">Homework #10.3</span>
                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
+              <div class="ga_" style="border-left-color:  #004358">
+                <a href="https://stackblitz.com/github/Energon89/dz/tree/master/11.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                  <span dir="ltr">Homework #11.1</span>
+                  <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+                </a></div>
           </div>
         </div>
 			</div>
