add dz 12.1 and dz 12.2

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,16 @@
                   <span dir="ltr">Homework #11.1</span>
                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
                 </a></div>
+              <div class="ga_" style="border-left-color:  #035800">
+               <a href="https://stackblitz.com/github/Energon89/dz/tree/master/12/12.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                  <span dir="ltr">Homework #12.1</span>
+                  <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+                </a></div>
+              <div class="ga_" style="border-left-color:  #580d00">
+                <a href="https://stackblitz.com/github/Energon89/dz/tree/master/12/12.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                  <span dir="ltr">Homework #12.2</span>
+                  <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a></div>
           </div>
         </div>
 			</div>
