--- a/12/12.2/public/index.html
+++ b/12/12.2/public/index.html
@@ -21,17 +21,17 @@
         <div data-mode="stopwatch" class="hidden">
           <div class="output">00:00:00</div>
           <div class="buttons">
-            <button data-mode="start" class="start">Start</button>
-            <button data-mode="stop" class="stop">Stop</button>
-            <button data-mode="reset" class="reset">Reset</button>
+            <button class="start">Start</button>
+            <button class="stop">Stop</button>
+            <button class="reset">Reset</button>
           </div>
         </div>
         <div data-mode="timer" class="hidden">
           <div class="output">00:05:00</div>
           <div class="buttons">
-            <button data-mode="start" class="start">Start</button>
-            <button data-mode="stop" class="stop">Stop</button>
-            <button data-mode="reset" class="reset">Reset</button>
+            <button class="start">Start</button>
+            <button class="stop">Stop</button>
+            <button class="reset">Reset</button>
           </div>
         </div>
       </div>
