--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,11 @@
                   <span dir="ltr">Homework #13.1</span>
                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
+              <div class="ga_" style="border-left-color:  #580045">
+                <a href="https://stackblitz.com/github/Energon89/dz/tree/master/14/14.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                  <span dir="ltr">Homework #14.1</span>
+                  <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a></div>
           </div>
         </div>
 			</div>
