--- a/14/14.2/public/index.html
+++ b/14/14.2/public/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <a
-      href="https://stackblitz.com/github/Energon89/dz/tree/master/14/14.1"
+      href="https://github.com/Energon89/dz/raw/master/14/14.2/img/clg.jpg"
+      target="_blank"
+    >
+      <span>console.log</span>
+    </a>
+    <a
+      href="https://github.com/Energon89/dz/raw/master/14/14.2/img/proto_scheme.png"
       target="_blank"
     >
       <span>console.log</span>
