--- a/14/14.2/public/index.html
+++ b/14/14.2/public/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
+    <br />
     <a
       href="https://github.com/Energon89/dz/raw/master/14/14.2/img/clg.jpg"
       target="_blank"
     >
       <span>console.log</span>
     </a>
+    <br />
     <a
       href="https://github.com/Energon89/dz/raw/master/14/14.2/img/proto_scheme.png"
       target="_blank"
     >
-      <span>console.log</span>
+      <span>proto_scheme</span>
     </a>
     <script type="module" src="../src/modules/main.js"></script>
   </body>
