--- a/14/14.2/public/index.html
+++ b/14/14.2/public/index.html
@@ -9,19 +9,11 @@
   </head>
   <body>
     <br />
-    <a
-      href="https://github.com/Energon89/dz/raw/master/14/14.2/img/clg.jpg"
-      target="_blank"
-    >
-      <span>console.log</span>
-    </a>
+    <img src="https://github.com/Energon89/dz/raw/master/14/14.2/img/clg.jpg" />
     <br />
-    <a
-      href="https://github.com/Energon89/dz/raw/master/14/14.2/img/proto_scheme.png"
-      target="_blank"
-    >
-      <span>proto_scheme</span>
-    </a>
+    <img
+      src="https://github.com/Energon89/dz/raw/master/14/14.2/img/proto_scheme.png"
+    />
     <script type="module" src="../src/modules/main.js"></script>
   </body>
 </html>
