--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                   <span dir="ltr">Homework #12.1</span>
                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
                 </a></div>
-              <div class="ga_" style="border-left-color:  #580d00">
+              <div class="ga_" style="border-left-color:  #035800">
                 <a href="https://stackblitz.com/github/Energon89/dz/tree/master/12/12.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
                   <span dir="ltr">Homework #12.2</span>
                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
@@ -63,7 +63,7 @@
                   <span dir="ltr">Homework #14.1</span>
                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
-              <div class="ga_" style="border-left-color:  #580000">
+              <div class="ga_" style="border-left-color:  #580045">
                 <a href="https://stackblitz.com/github/Energon89/dz/tree/master/14/14.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
                   <span dir="ltr">Homework #14.2</span>
                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
@@ -72,7 +72,12 @@
                   <a href="https://stackblitz.com/github/Energon89/dz/tree/master/15/15.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
                     <span dir="ltr">Homework #15.1</span>
                     <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
-                </a></div>
+              </a></div>
+              <div class="ga_" style="border-left-color:  #e99c0e">
+                  <a href="https://stackblitz.com/github/Energon89/dz/tree/master/15/15.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                    <span dir="ltr">Homework #15.2</span>
+                    <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a></div>
           </div>
         </div>
 			</div>
