--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,11 @@
                     <span dir="ltr">Homework #15.2</span>
                     <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
+              <div class="ga_" style="border-left-color:  #8a7b7b">
+                <a href="https://stackblitz.com/github/Energon89/dz/tree/master/16/16.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                  <span dir="ltr">Homework #16.1</span>
+                  <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+            </a></div>
           </div>
         </div>
 			</div>
