--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,16 @@
 			<div id="tcHolder">
           <div class="fa_">
           <a href="https://www.it-academy.by/course/front-end-developer/razrabotka-veb-prilozheniy-na-javascript/" target="_blank" id="linkIt">IT-Academy course "JavaScript Front-end Development"</a>
-          <div class="ga_" style="border-left-color: #1F8A70">
+          <div class="ga_" style="border-left-color: #004358">
           <a href="https://stackblitz.com/github/Energon89/dz/tree/master/1.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
             <span dir="ltr">Homework #1.1</span>
             <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
-          <a href="https://www.it-academy.by/course/front-end-developer/razrabotka-veb-prilozheniy-na-javascript/" target="_blank" id="linkIt">IT-Academy course "JavaScript Front-end Development"</a>
+          <div class="ga_" style="border-left-color: #cedadd">
+          <a href="https://stackblitz.com/github/Energon89/dz/tree/master/2.1-2.5" class="d_ popstripeRs" data-notrack="true" target="_blank">
+            <span dir="ltr">Homework #2.1-2.5</span>
+            <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
           <div class="ga_" style="border-left-color: #1F8A70">
           <a href="https://stackblitz.com/github/Energon89/dz/tree/master/8.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
             <span dir="ltr">Homework #8.1</span>
