--- a/2.1-2.5/public/index.html
+++ b/2.1-2.5/public/index.html
@@ -8,40 +8,45 @@
     <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
-      <h1>Part1</h1>
-      <input class="colorInp" type="text" placeholder="Write color"/><br/>
-      <input onclick="updateColor1(); return false" type="submit" value="Update color">
-      <h1>Part2</h1>
-      <select onchange="updateColor2(this)">
-        <option value="No value">Select color</option>
-        <option value="black">Black</option>
-        <option value="blue">Blue</option>
-        <option value="brown">Brown</option>
-        <option value="cyan">Cyan</option>
-        <option value="DarkMagenta">DarkMagenta</option>
-        <option value="navy">Navy</option>
-      </select>ы
-      <h1>Part3</h1>
-      <select onchange="updateColor3(this)">
-        <option value="No value">Select color</option>
-        <option value="white">White</option>
-        <option value="blue">Blue</option>
-        <option value="brown">Brown</option>
-        <option value="cyan">Cyan</option>
-        <option value="darkmagenta">DarkMagenta</option>
-        <option value="navy">Navy</option>
-      </select>
-      <h1>Part4</h1>
-      <input onchange="updateColor4()" type="color" id="color"/>
-      <h1>Part5</h1>
-      <select onchange="updateColor5(this)">
-        <option value="No value">Select color</option>
-        <option value="white">White</option>
-        <option value="blue">Blue</option>
-        <option value="brown">Brown</option>
-        <option value="cyan">Cyan</option>
-        <option value="darkmagenta">DarkMagenta</option>
-        <option value="navy">Navy</option>
-    <script type="module" src="../src/modules/main.js"></script>
+    <h1>Part1</h1>
+    <input class="colorInp" type="text" placeholder="Write color" /><br />
+    <input
+      onclick="updateColor1(); return false"
+      type="submit"
+      value="Update color"
+    />
+    <h1>Part2</h1>
+    <select onchange="updateColor2(this)">
+      <option value="No value">Select color</option>
+      <option value="black">Black</option>
+      <option value="blue">Blue</option>
+      <option value="brown">Brown</option>
+      <option value="cyan">Cyan</option>
+      <option value="DarkMagenta">DarkMagenta</option>
+      <option value="navy">Navy</option>
+    </select>
+    <h1>Part3</h1>
+    <select onchange="updateColor3(this)">
+      <option value="No value">Select color</option>
+      <option value="white">White</option>
+      <option value="blue">Blue</option>
+      <option value="brown">Brown</option>
+      <option value="cyan">Cyan</option>
+      <option value="darkmagenta">DarkMagenta</option>
+      <option value="navy">Navy</option>
+    </select>
+    <h1>Part4</h1>
+    <input onchange="updateColor4()" type="color" id="color" />
+    <h1>Part5</h1>
+    <select onchange="updateColor5(this)">
+      <option value="No value">Select color</option>
+      <option value="white">White</option>
+      <option value="blue">Blue</option>
+      <option value="brown">Brown</option>
+      <option value="cyan">Cyan</option>
+      <option value="darkmagenta">DarkMagenta</option>
+      <option value="navy">Navy</option>
+    </select>
+    <script src="../src/modules/main.js"></script>
   </body>
 </html>
