--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,16 @@
                   <span dir="ltr">Homework #3.4-3.5</span>
                  <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
+              <div class="ga_" style="border-left-color:  #348aa0">
+                  <a href="https://stackblitz.com/github/Energon89/dz/tree/master/4/4.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                    <span dir="ltr">Homework #4.1</span>
+                    <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+                  </a>
+                  <a href="https://stackblitz.com/github/Energon89/dz/tree/master/4/4.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                    <span dir="ltr">Homework #4.2</span>
+                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a></div>
+
               <div class="ga_" style="border-left-color: #1F8A70">
               <a href="https://stackblitz.com/github/Energon89/dz/tree/master/8.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
                  <span dir="ltr">Homework #8.1</span>
