--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,11 @@
                     <span dir="ltr">Homework #4.2</span>
                    <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
+              <div class="ga_" style="border-left-color: #240316">
+                  <a href="https://stackblitz.com/github/Energon89/dz/tree/master/5/5.1-5.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                    <span dir="ltr">Homework #5.1-5.2</span>
+                    <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a></div>
 
               <div class="ga_" style="border-left-color: #1F8A70">
               <a href="https://stackblitz.com/github/Energon89/dz/tree/master/8.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
