--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,16 @@
                     <span dir="ltr">Homework #5.1-5.2</span>
                     <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
+              <div class="ga_" style="border-left-color:  #971329">
+                  <a href="https://stackblitz.com/github/Energon89/dz/tree/master/6/6.1-6.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                    <span dir="ltr">Homework #6.1-6.2</span>
+                    <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+                  </a>
+                  <a href="https://stackblitz.com/github/Energon89/dz/tree/master/6/6.3" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                    <span dir="ltr">Homework #6.3</span>
+                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a></div>
+
 
               <div class="ga_" style="border-left-color: #1F8A70">
               <a href="https://stackblitz.com/github/Energon89/dz/tree/master/8.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
