--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,15 @@
                     <span dir="ltr">Homework #6.3</span>
                    <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
               </a></div>
-
-
+              <div class="ga_" style="border-left-color:  #052202">
+                  <a href="https://stackblitz.com/github/Energon89/dz/tree/master/7/7.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                    <span dir="ltr">Homework #7.1</span>
+                    <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+                  </a>
+                  <a href="https://stackblitz.com/github/Energon89/dz/tree/master/7/7.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                    <span dir="ltr">Homework #7.2</span>
+                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a></div>
               <div class="ga_" style="border-left-color: #1F8A70">
               <a href="https://stackblitz.com/github/Energon89/dz/tree/master/8.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
                  <span dir="ltr">Homework #8.1</span>
