--- a/public/index.html
+++ b/public/index.html
@@ -138,6 +138,15 @@
                   <span dir="ltr">Homework #16.1</span>
                   <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
             </a></div>
+            <div class="ga_" style="border-left-color:  #a50a0a">
+              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/17/17.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Homework #17.1</span>
+                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+              </a>
+              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/17/17.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Homework #17.2</span>
+               <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
           </div>
         </div>
 			</div>
