--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,11 @@
                 <span dir="ltr">Homework #17.2</span>
                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
+          <div class="ga_" style="border-left-color:  #61b3e9">
+              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/18.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Homework #18.1</span>
+                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
           </div>
         </div>
 			</div>
