--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
                 <span dir="ltr">Homework #18.1</span>
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
-          div class="ga_" style="border-left-color:  #FD7400">
+          <div class="ga_" style="border-left-color:  #FD7400">
               <a href="https://stackblitz.com/github/Energon89/dz/tree/master/19/19.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
                 <span dir="ltr">Homework #19.1</span>
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
