--- a/public/index.html
+++ b/public/index.html
@@ -157,6 +157,11 @@
                 <span dir="ltr">Homework #19.1</span>
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
+          <div class="ga_" style="border-left-color:  #FD7400">
+            <a href="https://stackblitz.com/github/Energon89/dz/tree/master/19/19.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
+              <span dir="ltr">Homework #19.2</span>
+              <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
           </div>
         </div>
 			</div>
