--- a/energetic-chat/public/index.html
+++ b/energetic-chat/public/index.html
@@ -66,7 +66,37 @@
 
       <button type="submit" class="btn logbtn">Login</button>
 
-      <div class="buttom-text">Don't have account? <a href="#">Sign up</a></div>
+      <div class="buttom-text">
+        Don't have account?
+        <a href="#">Sign up</a>
+      </div>
+    </form>
+
+    <form class="signup-form hidden">
+      <span class="close" title="Close Sign up">&times;</span>
+
+      <h1>Create your Account</h1>
+
+      <div class="txtb">
+        <input type="text" />
+        <span data-placeholder="Username"></span>
+      </div>
+
+      <div class="txtb">
+        <input type="password" />
+        <span data-placeholder="Password"></span>
+      </div>
+
+      <div class="txtb">
+        <input type="password" />
+        <span data-placeholder="Confirm"></span>
+      </div>
+
+      <button type="submit" class="btn logbtn">Create</button>
+
+      <div class="buttom-text">
+        <a href="#">Sign in instead</a>
+      </div>
     </form>
 
     <script type="module" src="scripts/main.js"></script>
