update final project

--- a/energetic-chat/public/index.html
+++ b/energetic-chat/public/index.html
@@ -11,9 +11,7 @@
     <section class="chat-page">
       <div class="chat-window">
         <div class="chat-header">
-          <div class="chat-header__author">
-            chat.author.displayName
-          </div>
+          <div class="chat-header__author"></div>
           <div class="chat-header__btns">
             <button class="btn btn-green">
               Login
