--- a/20/20.2/public/index.html
+++ b/20/20.2/public/index.html
@@ -29,6 +29,13 @@
     >
       <span dir="ltr">Отчет по итоговому проекту (google sheet)</span></a
     >
+    <br />
+    <a
+      href="https://github.com/Energon89/dz/tree/master/energetic-chat/public"
+      target="_blank"
+    >
+      <span dir="ltr">Ссылка на github</span></a
+    >
     <script type="module" src="../src/modules/main.js"></script>
   </body>
 </html>
