--- a/public/index.html
+++ b/public/index.html
@@ -177,6 +177,11 @@
               <span dir="ltr">Homework #21.2</span>
               <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
+          <div class="ga_" style="border-left-color:  #004358">
+            <a href="https://stackblitz.com/github/Energon89/dz/tree/master/22/22.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+              <span dir="ltr">Homework #22.1</span>
+              <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
           </div>
         </div>
 			</div>
@@ -184,7 +189,6 @@
 		</div>
 		</div>
 	<div id="copyright">
-<!--2019 Copyright. <br><br>-->
   </div>
 </body>
 </html>
