--- a/21/21.1/public/index.html
+++ b/21/21.1/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
-    <button id="button">button</button>
+    <button class="button">button</button>
     <script type="module" src="../src/modules/main.js"></script>
   </body>
 </html>
