--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,11 @@
               <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
           <div class="ga_" style="border-left-color:  #035800">
+            <a href="https://stackblitz.com/github/Energon89/dz/tree/master/21/21.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+              <span dir="ltr">Homework #21.1</span>
+              <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
+          <div class="ga_" style="border-left-color:  #035800">
             <a href="https://stackblitz.com/github/Energon89/dz/tree/master/21/21.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
               <span dir="ltr">Homework #21.2</span>
               <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
