--- a/21/21.1/public/index.html
+++ b/21/21.1/public/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <button class="button">button</button>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="module" src="../src/modules/main.js"></script>
   </body>
 </html>
