--- a/public/index.html
+++ b/public/index.html
@@ -192,6 +192,11 @@
                 <span dir="ltr">Homework #22.2</span>
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
             </a></div>
+            <div class="ga_" style="border-left-color:  #582b00">
+              <a href="https://stackblitz.com/github/Energon89/dz/tree/master/23/23.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Homework #23.1</span>
+                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+            </a></div>
           </div>
         </div>
 			</div>
