--- a/public/index.html
+++ b/public/index.html
@@ -197,6 +197,11 @@
                 <span dir="ltr">Homework #23.1</span>
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
             </a></div>
+            <div class="ga_" style="border-left-color:  #084216">
+            <a href="https://stackblitz.com/github/Energon89/dz/tree/master/24/24.1" class="d_ popstripeRs" data-notrack="true" target="_blank">
+              <span dir="ltr">Homework #24.1</span>
+              <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
           </div>
         </div>
 			</div>
