--- a/public/index.html
+++ b/public/index.html
@@ -207,6 +207,11 @@
               <span dir="ltr">Homework #24.2</span>
               <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
+          <div class="ga_" style="border-left-color:  #59639b">
+            <a href="https://stackblitz.com/github/Energon89/dz/tree/master/25/25.2" class="d_ popstripeRs" data-notrack="true" target="_blank">
+              <span dir="ltr">Homework #25.2</span>
+              <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
           </div>
         </div>
 			</div>
