--- a/public/index.html
+++ b/public/index.html
@@ -212,6 +212,11 @@
               <span dir="ltr">Homework #25.2</span>
               <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
           </a></div>
+          <div class="ga_" style="border-left-color:  #ccec16">
+            <a href="https://stackblitz.com/github/Energon89/dz/tree/master/27" class="d_ popstripeRs" data-notrack="true" target="_blank">
+              <span dir="ltr">Homework #27</span>
+              <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+          </a></div>
           </div>
         </div>
 			</div>
